[gd_scene load_steps=2 format=3 uid="uid://jml1j4ywj7u7"]

[ext_resource type="Script" uid="uid://xivfqnmqdapu" path="res://scenes/ui/monthly_summary_panel.gd" id="1_xmlxs"]

[node name="MonthlySummaryPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xmlxs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "The Month's Events"

[node name="SummaryText" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Begin Next Month"
